Improve IF handling and write initial wiki